--- a/D03CBX_GUI_2023242.WpfClient/MainWindow.xaml
+++ b/D03CBX_GUI_2023242.WpfClient/MainWindow.xaml
@@ -5,9 +5,9 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:D03CBX_GUI_2023242.WpfClient"
         mc:Ignorable="d"
-        Title="MainWindow" Height="450" Width="800">
+        Title="MainWindow" Height="900" Width="1600">
     <Window.DataContext>
-        <local:MainWindowViewModel> </local:MainWindowViewModel>
+        <local:MainWindowViewModel></local:MainWindowViewModel>
     </Window.DataContext>
     <Grid>
         <Grid.ColumnDefinitions>
@@ -24,7 +24,7 @@
                 </DataTemplate>
             </ListBox.ItemTemplate>
         </ListBox>
-        <StackPanel Grid.Column="0" VerticalAlignment="Bottom" DataContext="{Binding SelectedRecord}">
+        <StackPanel Grid.Column="3" VerticalAlignment="Top" DataContext="{Binding SelectedRecord}">
             <Label Content="Title" Background="LightBlue" Padding="5"/>
             <TextBox Text="{Binding Title}" Padding="5"></TextBox>
             <Label Content="Genre" Background="LightBlue" Padding="5"/>
@@ -54,7 +54,7 @@
             <TextBox Text="{Binding Duration}" Padding="5"/>
             <Label Content="Rating" Background="LightBlue" Padding="5"/>
             <TextBox Text="{Binding Rating}" Padding="5"/>
-            
+
         </StackPanel>
 
         <TextBlock Grid.Column="1" Text="Albumok listája" HorizontalAlignment="Center"/>
@@ -65,11 +65,11 @@
                 </DataTemplate>
             </ListBox.ItemTemplate>
         </ListBox>
-        <StackPanel Grid.Column="1" VerticalAlignment="Bottom" DataContext="{Binding SelectedAlbum}">
+        <StackPanel Grid.Column="3" VerticalAlignment="Center" DataContext="{Binding SelectedAlbum}">
             <Label Content="Title" Background="LightBlue" Padding="5"/>
-            <TextBox Text="{Binding Title}" Padding="5"></TextBox>
+            <TextBox Text="{Binding AlbumName}" Padding="5"></TextBox>
             <Label Content="Genre" Background="LightBlue" Padding="5"/>
-            
+
             <!--TextBox Text="{Binding Genre}" Padding="5"/-->
             <ComboBox Grid.Column="1" SelectedItem="{Binding Genre}">
                 <ComboBox.ItemsSource>
@@ -93,7 +93,7 @@
 
             <Label Content="Year of release" Background="LightBlue" Padding="5"/>
             <TextBox Text="{Binding ReleaseYear}" Padding="5"/>
-            
+
 
         </StackPanel>
 
@@ -105,28 +105,32 @@
                 </DataTemplate>
             </ListBox.ItemTemplate>
         </ListBox>
-        <StackPanel Grid.Column="2" VerticalAlignment="Bottom" DataContext="{Binding SelectedWriter}">
+        <StackPanel Grid.Column="3" VerticalAlignment="Bottom" Margin="0,100" DataContext="{Binding SelectedWriter}">
             <Label Content="Name" Background="LightBlue" Padding="5"/>
-            <TextBox Text="{Binding Name}" Padding="5"/>
+            <TextBox Text="{Binding WriterName}" Padding="5"/>
             <Label Content="Year of Birth" Background="LightBlue" Padding="5"/>
             <TextBox Text="{Binding YearOfBirth}" Padding="5"/>
-            
+
 
         </StackPanel>
 
-        <StackPanel Grid.Column="3">
-
-
+        <StackPanel Grid.Column="3" VerticalAlignment="Top" Margin="0,270,0,0">
             <Button Content="Create Record" Command="{Binding CreateRecordCommand}"></Button>
             <Button Content="Update Record" Command="{Binding UpdateRecordCommand}"></Button>
             <Button Content="Delete Record" Command="{Binding DeleteRecordCommand}"></Button>
+        </StackPanel>
+        <StackPanel Grid.Column="3" VerticalAlignment="Top" Margin="0,505,0,0">
             <Button Content="Create Album" Command="{Binding CreateAlbumCommand}"></Button>
             <Button Content="Update Album" Command="{Binding UpdateAlbumCommand}"></Button>
             <Button Content="Delete Album" Command="{Binding DeleteAlbumCommand}"></Button>
+        </StackPanel>
+        <StackPanel Grid.Column="3" VerticalAlignment="Bottom" Margin="0,40">
+
             <Button Content="Create Writer" Command="{Binding CreateWriterCommand}"></Button>
             <Button Content="Update Writer" Command="{Binding UpdateWriterCommand}"></Button>
             <Button Content="Delete Writer" Command="{Binding DeleteWriterCommand}"></Button>
-
+        </StackPanel>
+        <StackPanel Grid.Column="3" VerticalAlignment="Bottom">
             <Button Content="NonCrud"></Button>
         </StackPanel>
     </Grid>
