--- a/D03CBX_JSClient/wwwroot/style.css
+++ b/D03CBX_JSClient/wwwroot/style.css
@@ -18,6 +18,7 @@ th {
     background-color: lightblue;
 }
 
+
 #updateformdiv {
     display: none;
     margin-bottom: 20px;
@@ -44,6 +45,69 @@ th {
     }
 
     #formdiv label {
+        font-weight: bolder;
+    }
+
+
+
+
+#formdivAlbum {
+    display: flex;
+    flex-direction: column;
+    margin-bottom: 20px;
+}
+
+    #formdivAlbum label, button, input {
+        margin: 10px;
+        padding: 7px;
+    }
+
+    #formdivAlbum label {
+        font-weight: bolder;
+    }
+
+#updateformdivAlbum {
+    display: none;
+    margin-bottom: 20px;
+}
+
+    #updateformdivAlbum label, button, input {
+        margin: 10px;
+        padding: 7px;
+    }
+
+    #updateformdivAlbum label {
+        font-weight: bolder;
+    }
+
+
+
+#formdivWriter {
+    display: flex;
+    flex-direction: column;
+    margin-bottom: 20px;
+}
+
+    #formdivWriter label, button, input {
+        margin: 10px;
+        padding: 7px;
+    }
+
+    #formdivWriter label {
+        font-weight: bolder;
+    }
+
+#updateformdivWriter {
+    display: none;
+    margin-bottom: 20px;
+}
+
+    #updateformdivWriter label, button, input {
+        margin: 10px;
+        padding: 7px;
+    }
+
+    #updateformdivWriter label {
         font-weight: bolder;
     }
 
